--- a/mainpage/static/common.css
+++ b/mainpage/static/common.css
@@ -361,9 +361,9 @@ ul#ingredient_list li {
 }
 
 .ingred-item {
-    margin:5px;
+    margin:auto;
     position:relative;
-    left:-59px;
+    left:-12px;
     display:flex;
     flex-wrap: nowrap;
     flex-direction: row;
@@ -376,6 +376,7 @@ ul#ingredient_list li {
     background-color: rgba(255, 252, 236, 0.3);
     border: solid #ffff 4px;
     min-width: 200px;
+    margin-bottom: 5px;
 }
 
 
@@ -499,6 +500,9 @@ ul.slider li {
         font-size: 23px;
         font-weight: bold;
     }
+    .add_feed {
+        display:none;
+    }
 
     .weather {
         text-align: center;
@@ -518,6 +522,10 @@ ul.slider li {
     }
     .navbar_right.active {
         display: block;
+    }
+    .add_feed.active {
+        display:block;
+        margin: auto;
     }
     #container {
         width: 100%;
