--- a/mainpage/templates/mainpage/recipe_search.html
+++ b/mainpage/templates/mainpage/recipe_search.html
@@ -54,7 +54,7 @@
                 </div>
                 <div class = "sblank"></div>
                 <div class="recipe-title">
-                    <a href="{% url 'mainpage:recipe_detail' board.recipe_id %}">{{board.title}}</a>
+                    <a class="aclasstitle" href="{% url 'mainpage:recipe_detail' board.recipe_id %}">{{board.title}}</a>
                 </div>
                 <div class = "sblank"></div>
             </div>
