--- a/mainpage/static/common.css
+++ b/mainpage/static/common.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');
 
+.aclasstitle {
+    text-decoration: none;
+    color:black;
+}
 
 body {
     position: relative;
