--- a/communityboard/static/css/style-cdetail.css
+++ b/communityboard/static/css/style-cdetail.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');
 div.container {
     width:100%;
     margin:0 auto;
