--- a/mainpage/static/loading-style.css
+++ b/mainpage/static/loading-style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');
+
 body{
     display: flex;
     background-color: #FFB30E;
