--- a/mainpage/templates/mainpage/bookmark_update.html
+++ b/mainpage/templates/mainpage/bookmark_update.html
@@ -1,4 +1,5 @@
 {% load static %}
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href='{% static "bookmark_update.css"%}'>
 <div id="model_add_feed" class="modal_overlay">
     <div class="modal_window">
