--- a/mainpage/templates/mainpage/ingredients_result.html
+++ b/mainpage/templates/mainpage/ingredients_result.html
@@ -53,7 +53,7 @@
             {% if user.is_authenticated %}
                 <h3>{{request.user.username}}<img class = per src="{% static 'per1.png' %}"></h3>
                 <br>
-                <p> <img class = alle src="{% static 'all1.png' %}"> <br><br> {{request.user.allergyinfo}}</p>
+                <p> <img class = alle src="{% static 'all1.png' %}"> <br><br> {{test}}</p>
             {% else %}
                 <p> 로그인 해야 이용 가능합니다 </p>
             {% endif %}
@@ -96,11 +96,8 @@
     <script>
         /* post로 view.py로 전달 */
         function send() {
-            alert("send"); 
             document.getElementById("contents").submit(); 
         }
-
-
 
         /* 재료 베이스 레시피 추천 */
         function ingred_recipe() {
