--- a/mainpage/templates/mainpage/mainpage.html
+++ b/mainpage/templates/mainpage/mainpage.html
@@ -17,7 +17,7 @@
     <div style="height: 100px; ">
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="navbar_logo">
-                <a href="{% url 'mainpage:mainpage' %}">
+                <a href="{% url 'mainpage:mainpage' %}" style="display: inline-block;">
                     <img src="{% static 'lglg.png' %}">
                 </a>
             </div>
