--- a/mypage/static/mypage.css
+++ b/mypage/static/mypage.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');
+
 :root {
     --main-color:#f9e1a3e4;
     --top-shadow:#e5cf96;
