--- a/mypage/static/withdrawal.css
+++ b/mypage/static/withdrawal.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');
+
 .card {
     display: flex;
     flex-direction: column;
