--- a/mainpage/static/common.css
+++ b/mainpage/static/common.css
@@ -500,9 +500,9 @@ ul.slider li {
         font-size: 23px;
         font-weight: bold;
     }
-    .add_feed {
+    /* .add_feed {
         display:none;
-    }
+    } */
 
     .weather {
         text-align: center;
@@ -523,10 +523,10 @@ ul.slider li {
     .navbar_right.active {
         display: block;
     }
-    .add_feed.active {
+    /* .add_feed.active {
         display:block;
         margin: auto;
-    }
+    } */
     #container {
         width: 100%;
     }
