--- a/mainpage/static/common.css
+++ b/mainpage/static/common.css
@@ -230,7 +230,7 @@ img {
     height: auto;
     margin-bottom: 20px;
 }
-#videoElement {
+#gum {
     width: 100%;
     height: auto;
     background-color: #666;
