--- a/mainpage/static/common.css
+++ b/mainpage/static/common.css
@@ -496,17 +496,17 @@ ul.slider li {
         justify-content: center;
         width: 100%;
     }
-    .search {
+    /* .search {
         text-align: center;
-    }
+    } */
     .my_info {
         text-align: center;
         font-size: 23px;
         font-weight: bold;
     }
-    .add_feed {
+    /* .add_feed {
         display:none;
-    }
+    } */
 
     .weather {
         text-align: center;
@@ -527,10 +527,10 @@ ul.slider li {
     .navbar_right.active {
         display: block;
     }
-    .add_feed.active {
+    /* .add_feed.active {
         display:block;
         margin: auto;
-    }
+    } */
     #container {
         width: 100%;
     }
