--- a/mainpage/templates/mainpage/bookmark_update.html
+++ b/mainpage/templates/mainpage/bookmark_update.html
@@ -8,7 +8,7 @@
         <div class="card-wrap">
             <div class="card-body">
                 {% for content in update %}
-                <a class="content-wrap" href="{% url 'communityboard:communityboard_create' %}" id={{content.recipeid.recipe_id}} onclick="checking_recipe(this.id)">
+                <a class="content-wrap" href="{% url 'communityboard:communityboard_create_review' %}" id={{content.recipeid.recipe_id}} onclick="checking_recipe(this.id)">
                     <div class="content-title">{{content.recipeid.title}}</div>
                     <div class="content-ingre">{{content.recipeid.ingre}}</div>
                     <div class="content-tag">{{content.recipeid.tag}}</div>
