--- a/mainpage/templates/mainpage/mainpage.html
+++ b/mainpage/templates/mainpage/mainpage.html
@@ -18,7 +18,6 @@
     <meta itemprop="image" content="../../../images/webrtc-icon-192x192.png">
     <meta itemprop="name" content="WebRTC code samples">
     <meta name="mobile-web-app-capable" content="yes">
-    <base target="_blank">
     <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 
     <title>Main Page</title>
@@ -27,10 +26,16 @@
     <!-- 메뉴 -->
     <div style="height: 100px; ">
         <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-            <div class="navbar_logo">
+            {% comment %} <div class="navbar_logo">
                 <a href="{% url 'mainpage:mainpage' %}">
                     <img src="{% static 'lglg.png' %}">
                 </a>
+            </div> {% endcomment %}
+            <div class="search">
+                <form action="{% url 'mainpage:search' %}" method="get">
+                    <input class="search1" type="text" name="kw">
+                    <input class="searchbtn" type="submit" value="검색">
+                </form>
             </div>
             <ul class="navbar_menu">
                 <li><a href="{% url 'mypage:main' %}"><img class ="my" src="{% static 'mypa.png' %}"></a></li>
@@ -38,14 +43,6 @@
                 <li><a href="{% url 'communityboard:communityboard_index' %}"><img class ="commu" src="{% static 'commu.png' %}"></a></li>
             </ul>
             <div class="navbar_right">
-                <div class="search">
-                    <form action="{% url 'mainpage:search' %}" method="get">
-                        <input class="searchbox1" type="text" name="kw">
-                        <input class="searchbox2" type="submit" value="검색">
-                    </form>
-                    {% comment %} <input id='searchfield' type='text' max_length=255 autocomplete='off'>
-                    <button class='searchbtn' onclick="search_recipe(); return false;">검색</button> {% endcomment %}
-                </div>
                 <div class = "wea">    
                     <a href="{% url 'mainpage:mainpage' %}#slideShow" class="weather">
                         <div class="temp"></div>
