--- a/users/templates/home.html
+++ b/users/templates/home.html
@@ -17,7 +17,7 @@
       
          <div class="account-login">
             
-            <form method="post" class="login-form" action="{% url 'member:login' %}">
+            <form method="post" class="login-form" action="{% url 'users:login' %}">
                <h1><center>EAT VILLAGE</h1>
                <br>
                <br> <br>
@@ -29,7 +29,7 @@
                </div>
                <div class="form-group">
                
-               <h2><p> <cneter> <font size = '5'>  <a href="/users/login/">Login page</a></p></h2>
+               <h2><p> <cneter> <font size = '5'>  <a href="{% url 'users:login' %}">Login page</a></p></h2>
                </div>
 
 
