--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -123,7 +123,7 @@ style
             </form>
             <div class="caption">  
                 <p>Welcome to the 'EAT VILLAGE'   
-                <br><a href="/users/signup">Sign up</a></p>
+                <br><a href="{% url 'users:signup' %}">Sign up</a></p>
             </div>   
     </section>
 
