--- a/users/templates/signup.html
+++ b/users/templates/signup.html
@@ -117,7 +117,7 @@
                         <input name='test_list' 
                         type="text" 
                         check_result="fail" 
-                        autocomplate = "off" required/>
+                        autocomplate = "off"/>
                         <label for = "test_list">ALLERGY</label>
                     </div>
 
