--- a/users/templates/signup3.html
+++ b/users/templates/signup3.html
@@ -31,7 +31,7 @@
                </div>
                <div class="form-group">
                
-               <h2><p> <cneter> <font size = '5'>  <a href="/users/signup/">Sign up</a></p></h2>
+               <h2><p> <cneter> <font size = '5'>  <a href="{% url 'users:login' %}">Sign up</a></p></h2>
                </div>
 
 
