--- a/mainpage/templates/mainpage/recipe_recom.html
+++ b/mainpage/templates/mainpage/recipe_recom.html
@@ -15,7 +15,7 @@
         {{ data }}<br /> 
         storage : {{ data.storage }}<br />         
     </div> {% endcomment %}
-    <div>
+    <div style="text-align:center">
         <h3>재료 추천 레시피</h3>
     </div>
     <div class="list">
