--- a/recipeboard/templates/recipeboard/recipeboard_index.html
+++ b/recipeboard/templates/recipeboard/recipeboard_index.html
@@ -12,7 +12,7 @@
 
     <!-- custom CSS -->
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/style-index.css' %}?after">
+    <link rel="stylesheet" href="{% static 'css/style-index.css' %}">
     <script src="{% static 'mainpage/header.css' %}"></script>
 
     <!-- Font -->
