--- a/mainpage/static/bookmark_update.css
+++ b/mainpage/static/bookmark_update.css
@@ -83,8 +83,8 @@
     }
     .add_feed {
         position: absolute;
-        left: 17rem;
-        margin-top: 5px;
+        left: 284px;
+        margin-top: 4px;
     }
 }
 
