--- a/mainpage/static/header.css
+++ b/mainpage/static/header.css
@@ -2,6 +2,7 @@
 
 body {
     margin: 0;
+    font-family: 'Poor Story', cursive;
 }
 
 ul, li {
@@ -318,6 +319,8 @@ ul#ingredient_list li {
     .navbar_menu li {
         width: 100%;
         text-align: center;
+        font-size: 20px;
+        font-weight: bold;
     }
     .navbar_right {
         display: none;
