--- a/mainpage/templates/mainpage/mainpage.html
+++ b/mainpage/templates/mainpage/mainpage.html
@@ -38,9 +38,9 @@
                 </form>
             </div>
             <ul class="navbar_menu">
-                <li><a href="{% url 'mypage:main' %}"><img class ="my" src="{% static 'mypa.png' %}"></a></li>
-                <li><a href="{% url 'recipeboard:recipeboard_index' %}"><img class ="reci"src="{% static 'reci.png' %}"></a></li>
-                <li><a href="{% url 'communityboard:communityboard_index' %}"><img class ="commu" src="{% static 'commu.png' %}"></a></li>
+                <li><a class="my" href="{% url 'mypage:main' %}">MYPAGE</a></li>
+                <li><a class="reci" href="{% url 'recipeboard:recipeboard_index' %}">RECIPE</a></li>
+                <li><a class="commu" href="{% url 'communityboard:communityboard_index' %}">COMMUNITY</a></li>
             </ul>
             <div class="navbar_right">
                 <div class = "wea">    
@@ -48,20 +48,20 @@
                         <div class="temp"></div>
                         <div class="icon"></div>
                 </div>        
-                <div class="my_info">
-                    {% if user.is_authenticated %}
-                        <div class="main_common">
-                            {% comment %} <p>{{request.user.username}}님 환영 합니다. </p> {% endcomment %}
-                            <p>{{request.user.username}}<a href="{% url 'users:logout' %}"><button class = logout_1> <img class=out src="{% static 'logout.png' %}"> </button> </a></p>
-                        </div>
-                    {% else %}
-                        <div class="main_common">
-                            <p> 로그인 해야 이용 가능합니다 </p>
-                            <a href="{% url 'users:login' %}"><button class = login_1> <img class=in src="{% static 'login.png' %}"> </button> </a>
-                        </div>
-                    {% endif %}  
-                    </a> 
-                </div>
+            <div class="my_info">
+                {% if user.is_authenticated %}
+                    <div class="main_common">
+                        {% comment %} <p>{{request.user.username}}님 환영 합니다. </p> {% endcomment %}
+                        <p class="userid">{{request.user.username}}<a href="{% url 'users:logout' %}"><button class = "logout_1"> <img class=out src="{% static 'logout.png' %}"> </button> </a></p>
+                    </div>
+                {% else %}
+                    <div class="main_common">
+                        <p> 로그인 해야 이용 가능합니다 </p>
+                        <a href="{% url 'users:login' %}"><button class ="login_1"> <img class=in src="{% static 'login.png' %}"> </button> </a>
+                    </div>
+                {% endif %}  
+                </a> 
+            </div>
                 {% comment %} <div class="my_info">
                     {% if user.is_authenticated %}
                         <p>{{request.user.first_name}}님은 현재 {{request.user.allergyinfo}} 대한 알러지가 있습니다 </p>
