로딩에서 모델 실행 성공 : 로딩 시간과 모델 실행 시간 싱크 맞추기

--- a/mainpage/templates/mainpage/mainpage.html
+++ b/mainpage/templates/mainpage/mainpage.html
@@ -138,7 +138,7 @@
         </div>
     </section>
     <script src="{% static 'main.js' %}"></script>
-    <script src="{% static 'stream_main.js' %}?after"></script>
+    <script src="{% static 'stream_main.js' %}"></script>
     <script src="{% static 'ga.js' %}"></script>
     <script>
         /* 위치기반 현재 날씨 정보 */
