--- a/mainpage/templates/mainpage/loading.html
+++ b/mainpage/templates/mainpage/loading.html
@@ -22,7 +22,7 @@
 <div class="loading wave">
   분석중...
 </div>
-
+<iframe src="http://127.0.0.1:8000/mainpage/video_feed" style="display: none;"></iframe>
 <!-- partial -->
 <script>
   function next() {
