북마크 에러 수정//로딩에서 모델 실행//

--- a/mainpage/templates/mainpage/bookmark_update.html
+++ b/mainpage/templates/mainpage/bookmark_update.html
@@ -1,6 +1,6 @@
 {% load static %}
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" type="text/css" href='{% static "bookmark_update.css"%}'>
+<link rel="stylesheet" type="text/css" href='{% static "bookmark_update.css"%}?after'>
 <div id="model_add_feed" class="modal_overlay">
     <div class="modal_window">
         <div id="back_btn" class="card-header">
