--- a/mainpage/static/bookmark_update.css
+++ b/mainpage/static/bookmark_update.css
@@ -40,6 +40,7 @@
     height:fit-content;
     padding: 2rem 4rem;
     background-color: white;
+    border-radius:  0 0 10px 10px;
 }
 .card-header {
     padding: 0.5rem 1rem 0.5rem;
@@ -50,6 +51,8 @@
 
 .content-wrap {
     display:flex;
+    text-decoration: none;
+    color:black;
     flex-direction:column;
     padding: 1rem;
     margin-bottom: 2rem;
