--- a/mainpage/static/common.css
+++ b/mainpage/static/common.css
@@ -103,15 +103,20 @@ img {
 .my {
     filter:drop-shadow(5px 5px 5px #ffdb9d);
     color: #000000;
-    
+    width: 44px;
+    height: 44px;
 }
 .reci {
     filter:drop-shadow(5px 5px 5px #ffdb9d);
     color: #000000;
+    width: 44px;
+    height: 44px;
 }
 .commu {
     filter:drop-shadow(5px 5px 5px #ffdb9d);
     color: #000000;
+    width: 44px;
+    height: 44px;
 }
 *,
 *::before,
