--- a/mainpage/static/loading-style.css
+++ b/mainpage/static/loading-style.css
@@ -2,7 +2,7 @@
 
 body{
     display: flex;
-    background-color: #FFB30E;
+    background-color: #FCE484;
     flex-direction: column;
     justify-content: center;
     align-items: center;
