--- a/mainpage/templates/mainpage/loading.html
+++ b/mainpage/templates/mainpage/loading.html
@@ -5,7 +5,7 @@
   {% comment %} <title>CodePen - Preparing food loading animation using css </title> {% endcomment %}
   {% load static %}
   <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.2.0/css/all.css'>
-  <link rel="stylesheet" href="{% static 'loading-style.css' %}">
+  <link rel="stylesheet" href="{% static 'loading-style.css' %}? after">
 
 </head>
 <body>
