--- a/mainpage/templates/mainpage/mainpage.html
+++ b/mainpage/templates/mainpage/mainpage.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href='{% static "common.css" %}'>
+    <link rel="stylesheet" type="text/css" href='{% static "common.css" %}? after'>
     
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
@@ -111,9 +111,9 @@
                 <button id="btn2" onclick="find_ingred();">분석 시작</button>
             </div> -->
             <div>
-                <button id="record">Start Recording</button>
+                <button class="record-btn" id="record">Start Recording</button>
                 <!-- <button id="play" disabled>Play</button> -->
-                <button id="btn2" onclick="find_ingred();">분석 시작</button>
+                <button class="btn2" id="btn2" onclick="find_ingred();">분석 시작</button>
 
             </div>
 
