--- a/mainpage/templates/mainpage/header.html
+++ b/mainpage/templates/mainpage/header.html
@@ -25,7 +25,7 @@
         </div>
         <ul class="navbar_menu">
             <li><a href="{% url 'mypage:main' %}">MYPAGE</a></li>
-            <li><a href="{% url 'recipeboard:recipeboard_index' %}">LECIPE</a></li>
+            <li><a href="{% url 'recipeboard:recipeboard_index' %}">RECIPE</a></li>
             <li><a href="{% url 'communityboard:communityboard_index' %}">COMMUNITY</a></li>
         </ul>
         {% comment %} <div class="navbar_right">
