--- a/mainpage/static/header.css
+++ b/mainpage/static/header.css
@@ -304,6 +304,7 @@ ul#ingredient_list li {
         align-items: flex-start;
         padding: 8px 24px;
         outline: 5px solid #FFC851;
+        background: url("bar9.jpg") no-repeat center;
     }
     .navbar-expand-lg {
         flex-wrap: nowrap;
@@ -316,11 +317,16 @@ ul#ingredient_list li {
         align-items: center;
         width: 100%;
     }
+
     .navbar_menu li {
-        width: 100%;
-        text-align: center;
-        font-size: 20px;
+        font-size: 25px ;
         font-weight: bold;
+        width: 49%;
+        text-align: center;
+        margin:3px;
+        background-color: #fbe3bf;
+        border-radius: 15px;
+        box-shadow: 2px 2px 4px #fdc36d;
     }
     .navbar_right {
         display: none;
