--- a/mainpage/templates/mainpage/mainpage.html
+++ b/mainpage/templates/mainpage/mainpage.html
@@ -36,7 +36,7 @@
                     <input class="search1" type="text" name="kw">
                     <input class="searchbtn" type="submit" value="검색">
                     <div class = "logo-img">
-                        <a href="{% url 'mypage:main' %}"><img class=logo src="{% static 'e.png' %}"> </a></li>
+                        <a href="{% url 'mainpage:mainpage' %}"><img class=logo src="{% static 'e2.png' %}"> </a></li>
                     </div>
                 </form>
             </div>
