--- a/mainpage/static/common.css
+++ b/mainpage/static/common.css
@@ -199,13 +199,28 @@ img {
     width: 38%;
     text-align: center;
     position: relative;
-    left: 64px;
+    left: 69px;
+    top: 7px;
     border-radius: 10px;
     outline: none;
     font-weight: bold;
     background-color: #ffffff;
     font-size: 20px;
 }
+
+.search2{
+    width: 38%;
+    text-align: center;
+    position: relative;
+    left: 14px;
+    top:-239px;
+    border-radius: 10px;
+    outline: none;
+    font-weight: bold;
+    background-color: #ffffff;
+    font-size: 20px;
+}
+
 
 .weather {
     float: right;
@@ -952,8 +967,16 @@ button {
 
 
 
+.fa-bell {
+    position: relative;
+    top:8px;
+    left:px;
+}
 
-
+.fa-bars {
+    position: relative;
+    top:8px;
+}
 
 .searchbtn {
 
@@ -962,8 +985,8 @@ button {
   width: 18%;
   font-size: 1em;
   position: relative;
-  top: -2px;
-  left:62px;
+  top: 5px;
+  left:68px;
   padding: 5.2px;
   -webkit-appearance: none;
   appearance: none;
@@ -1057,10 +1080,10 @@ button {
     transition: transform ease-in 0.1s, box-shadow ease-in 0.25s;
     box-shadow: 0 2px 25px rgba(255, 0, 130, 0.5);
 }
-.bubbly-button:focus {
+.searchbtn:focus {
     outline: 0;
 }
-.bubbly-button:before, .bubbly-button:after {
+.searchbtn:before, .searchbtn:after {
     position: absolute;
     content: "";
     display: block;
@@ -1071,28 +1094,28 @@ button {
     transition: all ease-in-out 0.5s;
     background-repeat: no-repeat;
 }
-.bubbly-button:before {
+.searchbtn:before {
     display: none;
     top: -75%;
     background-image: radial-gradient(circle, #ff0081 20%, transparent 20%), radial-gradient(circle, transparent 20%, #ff0081 20%, transparent 30%), radial-gradient(circle, #ff0081 20%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%), radial-gradient(circle, transparent 10%, #ff0081 15%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%);
     background-size: 10% 10%, 20% 20%, 15% 15%, 20% 20%, 18% 18%, 10% 10%, 15% 15%, 10% 10%, 18% 18%;
 }
-.bubbly-button:after {
+.searchbtn:after {
     display: none;
     bottom: -75%;
     background-image: radial-gradient(circle, #ff0081 20%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%), radial-gradient(circle, transparent 10%, #ff0081 15%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%);
     background-size: 15% 15%, 20% 20%, 18% 18%, 20% 20%, 15% 15%, 10% 10%, 20% 20%;
 }
-.bubbly-button:active {
+.searchbtn:active {
     transform: scale(0.9);
     background-color: #e60074;
     box-shadow: 0 2px 25px rgba(255, 0, 130, 0.2);
 }
-.bubbly-button.animate:before {
+.searchbtn.animate:before {
     display: block;
     animation: topBubbles ease-in-out 0.75s forwards;
 }
-.bubbly-button.animate:after {
+.searchbtn.animate:after {
     display: block;
     animation: bottomBubbles ease-in-out 0.75s forwards;
 }
@@ -1121,6 +1144,214 @@ button {
       background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
     }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.searchbtn2 {
+
+    font-family: 'Poor Story', cursive;
+    display: inline-block;
+    width: 18%;
+    font-size: 1em;
+    position: relative;
+    top: -240px;
+    left: 11px;
+    padding: 5.2px;
+    -webkit-appearance: none;
+    appearance: none;
+    background-color: #f79604;
+    color: #fff;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
+    position: relative;
+    transition: transform ease-in 0.1s, box-shadow ease-in 0.25s;
+    box-shadow: 0 2px 25px rgba(255, 222, 139, 0.5);
+  }
+  .searchbtn2:focus {
+    outline: 0;
+  }
+  .searchbtn2:before, .searchbtn:after {
+    position: absolute;
+    content: "";
+    display: block;
+    width: 140%;
+    height: 100%;
+    left: -20%;
+    z-index: -1000;
+    transition: all ease-in-out 0.5s;
+    background-repeat: no-repeat;
+  }
+  .searchbtn2:before {
+    display: none;
+    top: -75%;
+    background-image: radial-gradient(circle, #ff9900 20%, transparent 20%), radial-gradient(circle, transparent 20%, #ff0081 20%, transparent 30%), radial-gradient(circle, #ff0081 20%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%), radial-gradient(circle, transparent 10%, #ff0081 15%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%);
+    background-size: 10% 10%, 20% 20%, 15% 15%, 20% 20%, 18% 18%, 10% 10%, 15% 15%, 10% 10%, 18% 18%;
+  }
+  .searchbtn2:after {
+    display: none;
+    bottom: -75%;
+    background-image: radial-gradient(circle, #ff9900 20%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%), radial-gradient(circle, transparent 10%, #ff0081 15%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%);
+    background-size: 15% 15%, 20% 20%, 18% 18%, 20% 20%, 15% 15%, 10% 10%, 20% 20%;
+  }
+  .searchbtn2:active {
+    transform: scale(0.9);
+    background-color: #ff9900;
+    box-shadow: 0 2px 25px rgba(255, 0, 130, 0.2);
+  }
+  .searchbtn2.animate:before {
+    display: block;
+    animation: topBubbles ease-in-out 0.75s forwards;
+  }
+  .searchbtn2.animate:after {
+    display: block;
+    animation: bottomBubbles ease-in-out 0.75s forwards;
+  }
+  
+  @keyframes topBubbles {
+    0% {
+      background-position: 5% 90%, 10% 90%, 10% 90%, 15% 90%, 25% 90%, 25% 90%, 40% 90%, 55% 90%, 70% 90%;
+    }
+    50% {
+      background-position: 0% 80%, 0% 20%, 10% 40%, 20% 0%, 30% 30%, 22% 50%, 50% 50%, 65% 20%, 90% 30%;
+    }
+    100% {
+      background-position: 0% 70%, 0% 10%, 10% 30%, 20% -10%, 30% 20%, 22% 40%, 50% 40%, 65% 10%, 90% 20%;
+      background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
+    }
+  }
+  @keyframes bottomBubbles {
+    0% {
+      background-position: 10% -10%, 30% 10%, 55% -10%, 70% -10%, 85% -10%, 70% -10%, 70% 0%;
+    }
+    50% {
+      background-position: 0% 80%, 20% 80%, 45% 60%, 60% 100%, 75% 70%, 95% 60%, 105% 0%;
+    }
+    100% {
+      background-position: 0% 90%, 20% 90%, 45% 70%, 60% 110%, 75% 80%, 95% 70%, 110% 10%;
+      background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
+    }
+  }n {
+      font-family: "Helvetica", "Arial", sans-serif;
+      display: inline-block;
+      font-size: 1em;
+      padding: 1em 2em;
+      margin-top: 100px;
+      margin-bottom: 60px;
+      -webkit-appearance: none;
+      appearance: none;
+      background-color: #ff0081;
+      color: #fff;
+      border-radius: 4px;
+      border: none;
+      cursor: pointer;
+      position: relative;
+      transition: transform ease-in 0.1s, box-shadow ease-in 0.25s;
+      box-shadow: 0 2px 25px rgba(255, 0, 130, 0.5);
+  }
+  .searchbtn2:focus {
+      outline: 0;
+  }
+  .searchbtn2:before, .searchbtn2:after {
+      position: absolute;
+      content: "";
+      display: block;
+      width: 140%;
+      height: 100%;
+      left: -20%;
+      z-index: -1000;
+      transition: all ease-in-out 0.5s;
+      background-repeat: no-repeat;
+  }
+  .searchbtn2:before {
+      display: none;
+      top: -75%;
+      background-image: radial-gradient(circle, #ff0081 20%, transparent 20%), radial-gradient(circle, transparent 20%, #ff0081 20%, transparent 30%), radial-gradient(circle, #ff0081 20%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%), radial-gradient(circle, transparent 10%, #ff0081 15%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%);
+      background-size: 10% 10%, 20% 20%, 15% 15%, 20% 20%, 18% 18%, 10% 10%, 15% 15%, 10% 10%, 18% 18%;
+  }
+  .searchbtn2:after {
+      display: none;
+      bottom: -75%;
+      background-image: radial-gradient(circle, #ff0081 20%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%), radial-gradient(circle, transparent 10%, #ff0081 15%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%), radial-gradient(circle, #ff0081 20%, transparent 20%);
+      background-size: 15% 15%, 20% 20%, 18% 18%, 20% 20%, 15% 15%, 10% 10%, 20% 20%;
+  }
+  .searchbtn2:active {
+      transform: scale(0.9);
+      background-color: #e60074;
+      box-shadow: 0 2px 25px rgba(255, 0, 130, 0.2);
+  }
+  .searchbtn2.animate:before {
+      display: block;
+      animation: topBubbles ease-in-out 0.75s forwards;
+  }
+  .searchbtn2.animate:after {
+      display: block;
+      animation: bottomBubbles ease-in-out 0.75s forwards;
+  }
+    
+  @keyframes topBubbles {
+      0% {
+        background-position: 5% 90%, 10% 90%, 10% 90%, 15% 90%, 25% 90%, 25% 90%, 40% 90%, 55% 90%, 70% 90%;
+      }
+      50% {
+        background-position: 0% 80%, 0% 20%, 10% 40%, 20% 0%, 30% 30%, 22% 50%, 50% 50%, 65% 20%, 90% 30%;
+      }
+      100% {
+        background-position: 0% 70%, 0% 10%, 10% 30%, 20% -10%, 30% 20%, 22% 40%, 50% 40%, 65% 10%, 90% 20%;
+        background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
+      }
+  }
+  @keyframes bottomBubbles {
+      0% {
+        background-position: 10% -10%, 30% 10%, 55% -10%, 70% -10%, 85% -10%, 70% -10%, 70% 0%;
+      }
+      50% {
+        background-position: 0% 80%, 20% 80%, 45% 60%, 60% 100%, 75% 70%, 95% 60%, 105% 0%;
+      }
+      100% {
+        background-position: 0% 90%, 20% 90%, 45% 70%, 60% 110%, 75% 80%, 95% 70%, 110% 10%;
+        background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
+      }
+  }
+  
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -1466,7 +1697,7 @@ button {
 
   .logo{
       width: 75px;
-      height: 75px;
+      height: 65px;
       
   }
  
@@ -1474,7 +1705,10 @@ button {
       width: 50px;
       height: 3px;
       position: relative;
-      top:-53px;
+      top:-48px;
       left: -22px;
+      margin:10px;
 
   }
+
+
