--- a/recipeboard/templates/recipeboard/recipeboard_create.html
+++ b/recipeboard/templates/recipeboard/recipeboard_create.html
@@ -11,7 +11,7 @@
 
     <!-- custom CSS -->
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style-create.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style-create.css' %}? after">
 
     <!-- Font -->
     <link rel="stylesheet" type="text/css"
