--- a/mainpage/static/header.css
+++ b/mainpage/static/header.css
@@ -76,11 +76,25 @@ a {
 .navbar_logo {
     font-size:24px;
     color: white;
+
+}
+.navbar_logo2 img {
+    display:block;
+    height: 65px;
+    width: 75px;
+    margin: 12px;
+    position: relative;
+    left: -11px;
+
 }
 .navbar_logo img {
     display:block;
-    height: 57px;
-    width: 70px;
+    height: 65px;
+    width: 75px;
+    margin: 12px;
+    position: relative;
+    left: -11px;
+
 }
 .navbar_menu {
     display: flex;
@@ -302,7 +316,7 @@ ul#ingredient_list li {
     .navbar {
         flex-direction: column;
         align-items: flex-start;
-        padding: 8px 24px;
+        padding: 3px 24px;
         outline: 5px solid #FFC851;
         background: url("bar9.jpg") no-repeat center;
     }
@@ -319,7 +333,7 @@ ul#ingredient_list li {
     }
 
     .navbar_menu li {
-        font-size: 25px ;
+        font-size: 20px ; /*25px */
         font-weight: bold;
         width: 49%;
         text-align: center;
