--- a/mainpage/templates/mainpage/mainpage.html
+++ b/mainpage/templates/mainpage/mainpage.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href='{% static "common.css" %}? after'>
+    <link rel="stylesheet" type="text/css" href='{% static "common.css" %}'>
     
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
@@ -125,8 +125,8 @@
     </section>
 
     <section>
-        날씨 추천 레시피
-        <div id="slideShow">
+        <a class="wea-reci"><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;날씨 추천 레시피</a>
+        <div id="slideShow" class="s-show">
             <ul class="slider">
                 <li></li>
                 <li></li>
@@ -140,6 +140,7 @@
                 <li></li>
             </ul>
         </div>
+-
     </section>
     <script src="{% static 'main.js' %}"></script>
     <script src="{% static 'stream_main.js' %}"></script>
