--- a/recipeboard/static/css/style-create.css
+++ b/recipeboard/static/css/style-create.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poor+Story&display=swap');
 body {
-    background-color: #A4C454;
+    background-color: #FBECAD;
 }
 
 a {
