--- a/mainpage/templates/mainpage/mainpage.html
+++ b/mainpage/templates/mainpage/mainpage.html
@@ -295,13 +295,13 @@
     <script>
 
         /* 카메라 On & Off*/
-        function cameraAccess() {
-            if (document.getElementById('video').src == "http://127.0.0.1:8000/mainpage/video_feed") {
-                document.getElementById('video').src = "";
-            } else {
-                document.getElementById('video').src = "http://127.0.0.1:8000/mainpage/video_feed";
-            }
-        }
+        //function cameraAccess() {
+        //    if (document.getElementById('video').src == "http://127.0.0.1:8000/mainpage/video_feed") {
+        //        document.getElementById('video').src = "";
+        //    } else {
+        //        document.getElementById('video').src = "http://127.0.0.1:8000/mainpage/video_feed";
+        //    }
+        //}
 
 
 
